# Makowitz-Portfolio-Optimization

1.0/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  CMakeLists.txt  Matrix.cpp  asset_returns.csv  log.csv  main.cpp  read_data.h  util.h
1.0/py/: verify.py
2.0/: CMakeLists.txt  backtest_class.cpp  backtest_class.h  basic_function.cpp  basic_function.h  main.cpp
2.0/util/: Matrix.h  csv.cpp  csv.h  read_data.cpp  util.h
